--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                     <h3>Стандарт</h3>
                     <div class="price">15 000 ₽<span style="font-size: 1rem;">/мес</span></div>
                     <ul class="pricing-features">
-                        <li>6 консультации (3 онлайн + 3 выезда)</li>
+                        <li>6 консультаций (3 онлайн + 3 выезда)</li>
                         <li>8 часов групп присмотра</li>
                         <li>Индивидуальный план развития</li>
                         <li>Приоритетная поддержка</li>
